--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,7 @@ FIREBASE_CLIENT_EMAIL=your-client-email
 
 # Zillow API (RapidAPI)
 RAPIDAPI_KEY=your-rapidapi-key
+
+# Claude AI API Key for Chatbot
+# Get your key from: https://console.anthropic.com/
+CLAUDE_API_KEY=your_claude_api_key_here
