--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "check": "tsc"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.67.0",
     "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-accordion": "^1.2.4",
     "@radix-ui/react-alert-dialog": "^1.1.7",
@@ -28,17 +29,25 @@
     "@radix-ui/react-tooltip": "^1.2.0",
     "@tanstack/react-query": "^5.60.5",
     "@types/cors": "^2.8.19",
+    "@types/dompurify": "^3.0.5",
+    "@types/jsdom": "^27.0.0",
+    "@types/node-cron": "^3.0.11",
+    "@types/uuid": "^10.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
     "date-fns": "^3.6.0",
+    "dompurify": "^3.3.0",
     "dotenv": "^17.2.3",
     "express": "^4.21.2",
+    "express-rate-limit": "^8.1.0",
     "express-session": "^1.18.1",
     "firebase-admin": "^12.0.0",
     "framer-motion": "^11.13.1",
+    "jsdom": "^27.0.1",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.453.0",
+    "node-cron": "^4.2.1",
     "react": "^18.3.1",
     "react-big-calendar": "^1.15.0",
     "react-day-picker": "^8.10.1",
@@ -48,6 +57,7 @@
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "twilio": "^5.3.5",
+    "uuid": "^13.0.0",
     "wouter": "^3.3.5",
     "zod": "^3.24.2"
   },
