--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/cors": "^2.8.19",
     "@types/dompurify": "^3.0.5",
     "@types/jsdom": "^27.0.0",
+    "@types/multer": "^2.0.0",
     "@types/node-cron": "^3.0.11",
     "@types/uuid": "^10.0.0",
     "class-variance-authority": "^0.7.1",
@@ -42,11 +43,13 @@
     "express": "^4.21.2",
     "express-rate-limit": "^8.1.0",
     "express-session": "^1.18.1",
+    "firebase": "^12.6.0",
     "firebase-admin": "^12.0.0",
     "framer-motion": "^11.13.1",
     "jsdom": "^27.0.1",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.453.0",
+    "multer": "^2.0.2",
     "node-cron": "^4.2.1",
     "react": "^18.3.1",
     "react-big-calendar": "^1.15.0",
